# psychopy-scene

./: .gitignore  README-zh.md  README.md  pyproject.toml
examples/: go-nogo.py  multi-box.py  rt.py  test.py
psychopy_scene/: __init__.py  decorator.py
tests/: test_scene.py
